Closed
Bug 1492065
Opened 8 years ago
Closed 8 years ago
Unconditionally uses SSE2 instructions on x86
Categories
(Core :: Graphics, defect, P1)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla64
People
(Reporter: glandium, Assigned: glandium)
Details
Attachments
(1 file)
|
46 bytes,
text/x-phabricator-request
|
lsalzman
:
review+
RyanVM
:
approval-mozilla-esr60+
|
Details | Review |
While Mozilla.org builds of Firefox dropped support for x86 CPUs without SSE2, downstreams may support it. This is generally handled gracefully by having runtime detection, and many things do it in Gecko. One that doesn't, though, is the Swizzle code.
| Assignee | ||
Comment 1•8 years ago
|
||
The same is done for NEON, and the check folds to nothing when building
when the build target supports SSE2 and runtime detection is not
necessary.
Comment 2•8 years ago
|
||
Comment on attachment 9009873 [details]
Bug 1492065 - Use Swizzle fallback when SSE2 is not supported
Lee Salzman [:lsalzman] has approved the revision.
Attachment #9009873 -
Flags: review+
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/210b9e777cec
Use Swizzle fallback when SSE2 is not supported r=lsalzman
Updated•8 years ago
|
Priority: -- → P1
| Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 9009873 [details]
Bug 1492065 - Use Swizzle fallback when SSE2 is not supported
[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: Necessary for some downstreams.
User impact if declined: Downstreams such as Debian provide OSes that work on older x86 machines, and as such, try to keep Firefox working on those machines. For users with such machines (and there are surprisingly lots of them), Firefox crashes without this patch.
Fix Landed on Version: 64
Risk to taking this patch (and alternatives if risky): For Firefox builds that Mozilla ships, the patch actually is a no-op: the added conditions turn into "if (true)". For downstreams like Debian, this just ensures SSE2 instructions are not used on machines without SSE2.
String or UUID changes made by this patch: N/A
See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Attachment #9009873 -
Flags: approval-mozilla-esr60?
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 6•7 years ago
|
||
Comment on attachment 9009873 [details]
Bug 1492065 - Use Swizzle fallback when SSE2 is not supported
Fix for some downstream distros. Approved for ESR 60.3.
Attachment #9009873 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 7•7 years ago
|
||
| bugherder uplift | ||
status-firefox-esr60:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•