Bug 1492065 - Use Swizzle fallback when SSE2 is not supported r=lsalzman

The same is done for NEON, and the check folds to nothing when building
when the build target supports SSE2 and runtime detection is not
necessary.

Differential Revision: https://phabricator.services.mozilla.com/D6129